# svo_tools

./: CMakeLists.txt  README.md
msvc/: octree2svo.vcxproj  octree2svo.vcxproj.filters  svo_convert.vcxproj  svo_convert.vcxproj.filters  svo_tools.sln
src/octree2svo/: Node.h  octree_io.h
src/svo_convert/: Node.h  OctreeBuilder.h  build_svo_convert.sh  intersection.h  morton.h  octree2svo.h  voxelization.cpp
src/svo_tools/: octree2svo.vcxproj.filters  svo_tools.sln
src/svo_tools/octree2svo/: build_linux.sh  main.cpp  octree2svo.vcxproj
src/svo_tools/svo_convert/: DataPoint.h  Node.h  OctreeBuilder.cpp  OctreeBuilder.h  geo_primitives.h  main.cpp  mesh_operations.h  morton.h  octree2svo.h  svo_convert.h  svo_convert.vcxproj  svo_convert.vcxproj.filters  svo_convert_util.h  voxelization.cpp  voxelization.h
